Option to change top sites size and spacing. Issues #45 and #6.

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -49,11 +49,13 @@
 body {
     width: 100%;
     height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     color: var(--text-color);
 }
 
@@ -126,6 +128,7 @@ h2 {
 
 h3 {
     font-size: 14px;
+    margin-top: 10px;
 }
 
 a {
@@ -144,10 +147,11 @@ label {
 }
 
 .main-container {
-    width: 90%;
-    max-width: 1200px;
-    height: 80%;
-    margin: auto;
+    width: 80%;
+    height: fit-content;
+    max-width: 600px;
+    max-height: 62vh;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -156,29 +160,28 @@ label {
 
 #top-sites-header {
     width: fit-content;
-    margin: 0 auto 15px;
+    margin: 0 auto 2vh 0;
     background: rgba(var(--background-color), 0.7);
     padding: 8px 12px;
-    border-radius: 12px;
+    border-radius: 12px 12px 12px 0;
 }
 
 .top-sites-container {
     width: 100%;
-    max-height: 90%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     overflow: hidden;
 }
 
 .top-sites-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 60px);
-    grid-auto-rows: 60px;
-    gap: 10px;
+    grid-template-columns: repeat(auto-fill, var(--item-size, 60px));
+    grid-auto-rows: var(--item-size, 60px);
+    gap: var(--grid-gap, 10px);
     justify-content: center;
     overflow-y: auto;
-    padding: 5px;
-    max-height: 300px;
+    max-height: 70%;
 }
 
 /*
@@ -206,10 +209,8 @@ label {
     color: var(--text-color);
     background-color: rgba(var(--background-color), 0.7);
     border-radius: 8px;
-    max-width: 60px;
-    max-height: 60px;
-    width: 60px;
-    height: 60px;
+    width: var(--item-size, 60px);
+    height: var(--item-size, 60px);
 }
 
 .top-site-group a:active {
@@ -218,18 +219,19 @@ label {
 
 .top-site-group a img {
     display: block;
-    margin: 5px auto;
+    margin: 10% auto;
     height: 50%;
     aspect-ratio: 1;
 }
 
 .placeholder-image {
-    height: 30px;
-    width: 30px;
+    height: 50%;
+    width: 50%;
     background: rgb(var(--box-background));
     color: var(--text-color);
+    font-size: var(--font-size);
     position: absolute;
-    margin-top: 5px;
+    margin-top: 10%;
     left: 50%;
     transform: translate(-50%);
     display: flex;
@@ -240,14 +242,14 @@ label {
 
 .top-site-group a span {
     display: block;
-    font-size: 11px;
-    max-height: 38%;
+    font-size: var(--font-size, 11px);
     overflow: hidden;
-    bottom: 5px;
+    bottom: 0;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
     max-width: 90%;
+    height: 30%;
     white-space: nowrap;
 }
 
@@ -259,7 +261,7 @@ label {
     overflow: scroll;
     margin: auto;
     position: fixed;
-    border: 1px solid var(--primary-color);
+    border: 1px solid rgb(var(--background-color));
     border-radius: 8px;
     padding: 10px;
     display: block;
@@ -407,12 +409,12 @@ button {
 #top-sites-buttons {
     display: flex;
     width: fit-content;
-    margin: 15px auto 0;
+    margin: 2vh 0 0 auto;
     gap: 10px;
     background: rgba(var(--background-color), 0.7);
     height: fit-content;
     padding: 0 8px 0;
-    border-radius: 12px;
+    border-radius: 12px 0 12px 12px;
 }
 
 #add-top-site-button,
@@ -484,6 +486,32 @@ button {
 .preferences-prompt h2 {
     width: fit-content;
     margin: 0 auto;
+}
+
+.currentValue {
+    font-size: 14px;
+    display: inline-block;
+    width: 25px;
+}
+
+input[type='range'] {
+    appearance: none;
+    width: 80%;
+    height: 6px;
+    background: rgb(var(--background-color));
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    margin-top: 14px;
+}
+
+input[type='range']::-moz-range-thumb {
+    width: 12px;
+    height: 24px;
+    background: rgb(var(--background-color));
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 #exportTopSites {
